2008-04-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/draft-latency.txt:
	Fix typo.

	* docs/design/part-buffering.txt:
	Update design docs with more buffering ideas.

2008-04-03  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Bump version to 0.10.19.1 after the unscheduled 0.10.19 release.

2008-04-03  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Revert part that belongs to the preset patch.

2008-04-03  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Add qoutes to the define. Fixes # 525961.

2008-04-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/indexers/gstfileindex.c: (_file_index_id_free),
	(gst_file_index_load), (gst_file_index_add_id),
	(gst_file_index_get_assoc_entry):
	* plugins/indexers/gstmemindex.c: (gst_mem_index_free_format),
	(gst_mem_index_free_id), (gst_mem_index_add_id),
	(gst_mem_index_index_format):
	Use GSlice when possible.

2008-04-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* libs/gst/controller/gstinterpolationcontrolsource.c:
	(gst_control_point_free),
	(gst_interpolation_control_source_set_internal):
	Use GSlice for allocating the control points.

2008-04-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	* plugins/elements/gsttypefindelement.c:
	(gst_type_find_element_class_init),
	(gst_type_find_element_set_property),
	(gst_type_find_element_get_property),
	(gst_type_find_element_activate):
	* plugins/elements/gsttypefindelement.h:
	Cleanup properties.
	Fix pad leak when peer query fails.
	We can still typefind when the peer returns -1.
	Add property to force caps and bypass typefinding. This will be used in
	uridecodebin.
	API::force-caps

2008-04-01  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	Require GLib 2.12.

	* gst/glib-compat-private.h:
	* gst/gstcaps.c: (gst_caps_new_empty), (_gst_caps_free):
	* gst/gstclock.c: (gst_clock_entry_new), (_gst_clock_id_free):
	Unconditionally use GSlice for allocation.
