@@ -1,3 +1,10 @@
+2008-04-05  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>
+
+	* gst/gstpoll.c:
+	Fix compilation of GstPoll with mingw32. Fixes bug #526236.
+
 2008-04-04  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* docs/design/draft-latency.txt:
